
Overview of Changes in Glimpse 0.2.1
====================================
* Uplifted GNOME Platform version in Flatpak from 3.36 to 3.38
* Added permissions for Flatpak to open, save and edit files in the /tmp directory
* Backported fix for upstream regression #4496 that breaks liquid rescale plugin
* Added Large Text variants of Dark, Gray and Light UI themes
* TO BE DETERMINED - Still in development

Overview of Changes in Glimpse 0.2.0
====================================
* Uplifted BABL version from 0.1.68 to 0.1.78
* Uplifted Mypaint-Brushes from 1.3.0 to 1.3.1
* Uplifted LibMyPaint from 1.3.0 to 1.5.1
* Uplifted GEGL version from 0.4.16 to 0.4.22
* Uplifted GNU Image Manipulation Program base from 2.10.12 to 2.10.18
* Updated `HACKING` and GEGL/BABL build jobs to use new `meson` build process
* Removed git submodules previously provided for convenience only
* Removed Vagrant quick start build process
* Updated the `README.MD` file with more current information
* Backported high contrast icon themes from GNU Image Manipulation Program 2.10.18
* Backported bugfix for upstream issue 4487 (security issue with redacted content in exported images)
* Added new application icon in About window
* Added new application icons to the rest of the application
* Replaced dozens of icons that previously used Wilber's face in icon packs
* Fixed the icon pack previewer in the Preferences menu
* Moved to new wiki site and updated links to https://github.com/glimpse-editor/Glimpse/wiki
* Moved to new Github Pages site and updated links to https://glimpse-editor.github.io
* Changed the default configuration to set the minimum undo levels to 10 (previously 5)
* Changed the default configuration so that the "Created by Glimpse" message is always present
* Changed the update checker so it supports our version scheme, download links and update servers
* Created new Github Actions that provide a Linux and Windows CI builds on our development branch