@@ -13,6 +13,7 @@ Overview of Changes in Glimpse 0.2.1
 * Added permissions for Flatpak to open, save and edit files in the /tmp directory
 * Backported fix for upstream regression #4496 that breaks liquid rescale plugin
 * Added Large Text variants of Dark, Gray and Light UI themes
+* Uplifted BABL to 0.1.82 and GEGL to 0.4.26 in the continuously-updated AppImage
 * TO BE DETERMINED - Still in development
 
 Overview of Changes in Glimpse 0.2.0
